[gd_scene load_steps=2 format=3 uid="uid://bbu78frfqbt6j"]

[ext_resource type="Script" uid="uid://dh3h6txarxjej" path="res://whiteboard/relation_node.gd" id="1_akm62"]

[node name="RelationNode" type="GraphNode"]
offset_right = 328.0
offset_bottom = 194.0
resizable = true
title = "Relation"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_akm62")
ARITY = 2

[node name="TextEdit" type="TextEdit" parent="."]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Arity" type="RichTextLabel" parent="HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Arity"

[node name="SpinBox" type="SpinBox" parent="HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Types" type="RichTextLabel" parent="HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Types"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer3"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="AddFact" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "+"

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "output"

[connection signal="delete_request" from="." to="." method="_on_delete_request"]
[connection signal="pressed" from="HBoxContainer/AddFact" to="." method="_on_add_fact_pressed"]
